# regulatory-inquiry-prediction

./: .gitignore  pyproject.toml  working_transfer_instruction.md
configs/: qlora_qwen3_8b.yaml  qlora_qwen3_8b_leakage_free.yaml
data/processed/: auxiliary_questions.jsonl  evidence_candidates.jsonl  manifest.csv  regulatory_questions.jsonl  regulatory_questions_clean.jsonl  sft_dry_run_10.jsonl  sft_train.jsonl
data/training/: test.jsonl  train.jsonl  validation.jsonl
reports/: ablation_results.csv  ablation_results.md  consistency_checks.txt  evidence_review.xlsx  experiment_artifact_audit.md  experiment_metrics_summary.md  extraction_summary.md  final_experiment_handoff.md  full_training_summary.md  initial_data_audit.md  main_results.csv  main_results.md  ocr_priority_pages.csv  parse_failures.csv  qlora_dry_run_summary.md  question_extraction_validation.csv  question_quality_summary.md  questions_for_review.csv  retrieval_summary.md  sft_export_summary.md  sft_split_summary.md
src/data_pipeline/: __init__.py  cli.py  evidence_alignment.py  io_utils.py  leakage_free.py  manifest.py  models.py  pdf_extract.py  pipeline.py  quality.py  question_cleaning.py  questions.py  sft_export.py  sft_split.py
src/evaluation/: annotation_tables.py  auto_metrics.py  build_tables.py  group_metrics.py
src/training/: generate.py  plot_loss.py  train_qlora.py
tests/: test_evidence_alignment.py  test_extraction_pipeline.py  test_project_structure.py  test_question_cleaning.py  test_sft_export.py  test_sft_split.py
