[project]
name = "regulatory-inquiry-prediction"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "typer>=0.26.8",
    "torch>=2.8,<2.9",
    "transformers>=4.53",
    "peft>=0.15",
    "bitsandbytes>=0.45",
    "accelerate>=1.6",
    "datasets>=3.5",
    "huggingface-hub[cli]>=0.30",
    "pyyaml>=6.0",
    "matplotlib>=3.9",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
